Adição dos botões mais/menos um cartão

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;400;600;800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="style.css">
   <title>Drag & Drop</title>
 </head>
@@ -12,26 +13,34 @@
     <div class="frame">
       <h3>Todo</h3>
       <div class="dropzone">
-        <div class="card" draggable="true"> do videos!</div>
-        <div class="card" draggable="true"> More codes!</div>
+        <div class="card" draggable="true">Flex Page!</div>
+        <div class="card" draggable="true">More codes!</div>
       </div>
     </div>
 
     <div class="frame">
       <h3>In Progress</h3>
       <div class="dropzone">
-        <div class="card" draggable="true"> This SPA!</div>
+        <div class="card" draggable="true">This SPA!</div>
       </div>
     </div>
 
     <div class="frame">
       <h3>Done</h3>
       <div class="dropzone">
-        <div class="card" draggable="true"> Bin to Hex!</div>
+        <div class="card" draggable="true">Bin to Hex!</div>
       </div>
     </div>
   </section>
-  <footer><a href="natantavares/github.com">&copy Natan Tavares</a></footer>
+  <div class="more-card">
+    <span class="fa fa-plus"></span>
+  </div>
+
+  <div class="minus-card">
+    <span class="fa fa-trash"></span>
+  </div>
+
+  <footer><a href="https://github.com/NatanTavares">&copy Natan Tavares</a></footer>
 </body>
 <script src="./script.js" defer></script>
 </html>
